--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,30 @@
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+/* make carousel img similar size */
+.carousel img{
+		width:100% !important;
+ 		min-width:100% !important;
+ 		height: auto;
+}
 
+/* height for mapbox map */
 #map-container { height: 180px; }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* styles for statistics */
+dl {
+    border: 3px double #ccc;
+    padding: 0.5em;
+  }
+  dt {
+    float: left;
+    clear: left;
+    width: 100px;
+    text-align: right;
+    font-weight: bold;
+    color: green;
+  }
+  dt::after {
+    content: ":";
+  }
+  dd {
+    margin: 0 0 0 110px;
+    padding: 0 0 0.5em 0;
+  } 
